admin layout shaped

--- a/Areas/Dashboard/Pages/_adminLayout.cshtml
+++ b/Areas/Dashboard/Pages/_adminLayout.cshtml
@@ -249,7 +249,7 @@
                         @* ürün işlemleri *@
                         <li class="nav-item">
                             <a class="nav-link">
-                                <i class="nav-icon fas fa-product"></i>
+                                <i class="nav-icon fa fa-product-hunt"></i>
                                 <p>
                                     Ürün İşlemleri
                                     <i class="right fas fa-angle-left"></i>
