form pages, footer, contact us form, contact us page , about us page created

--- a/Views/Home/ContactUs.cshtml
+++ b/Views/Home/ContactUs.cshtml
@@ -1,1 +1,20 @@
-﻿
+﻿@section Title {
+    <meta name="title" content="Hakkında">
+}
+@section Description {
+    <meta name="description" content="İthal ürünleri toptan ve perakende olarak satın alın. Katalog ürünleri, marka patent desteği ve e-ticaret çözümleri sunuyoruz.">
+}
+@section Keywords {
+    <meta name="keywords" content="Çin ithalat, toptan ürünler, perakende satış, marka patent, e-ticaret çözümleri, toptan spor malzemeleri ithalatı, marka desteği, toptan petshop ürünleri,
+                                        toptan spor malzemesi">
+}
+@Html.AntiForgeryToken()
+@Html.Partial("_PartialContactUs");
+
+@section AdditionalScripts {
+    <script>
+        $(document).ready(function () {
+            $(".dropdown").removeClass("current");
+        }
+    </script>
+}
