--- a/Views/Home/CookiePolicy.cshtml
+++ b/Views/Home/CookiePolicy.cshtml
@@ -19,9 +19,11 @@
             color: #333;
         }
 
-        h1, h2 {
+        h1, h2, h3 {
             color: #2c3e50;
+            margin-top: 40px;
         }
+
     </style>
  }
 
@@ -69,7 +71,6 @@
         $(document).ready(function()
         {
             $(".dropdown").removeClass("current");
-            $(".about").addClass("current");
         });
     </script>
 }
