--- a/Views/Home/KVKK.cshtml
+++ b/Views/Home/KVKK.cshtml
@@ -8,20 +8,18 @@
     <meta name="keywords" content="Çin ithalat, toptan ürünler, perakende satış, marka patent, e-ticaret çözümleri, toptan spor malzemeleri ithalatı, marka desteği, toptan petshop ürünleri,
                                             toptan spor malzemesi">
 }
-
-
 @section CSS {
     <style>
         body {
             font-family: Arial, sans-serif;
+            line-height: 1.6;
             margin: 40px;
             background-color: #f9f9f9;
             color: #333;
-            line-height: 1.7;
         }
 
         h2 {
-            color: #2a7dad;
+            color: #006699;
             margin-top: 40px;
         }
 
@@ -30,31 +28,12 @@
             color: #444;
         }
 
-        p, ul, ol, table {
-            margin-bottom: 15px;
-        }
-
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            background-color: #fff;
-        }
-
-        th, td {
-            border: 1px solid #ccc;
-            padding: 10px;
-            text-align: left;
-        }
-
-        .signature {
-            margin-top: 40px;
-        }
-
-        .section {
-            margin-top: 50px;
+        p, li {
+            margin-bottom: 10px;
         }
     </style>
- }
+}
+
 
 <div class="section">
     <h2>Kişisel Verilerin Korunması Aydınlatma Metni</h2>
