--- a/Views/Shared/_PartialEcommerceService.cshtml
+++ b/Views/Shared/_PartialEcommerceService.cshtml
@@ -14,7 +14,7 @@
                 <!-- Image Column -->
                 <div class="image-column col-lg-6 col-md-12 col-sm-12">
                     <div class="image">
-                        <img src="images/resource/image-1.jpg" alt="Hizmetlerimiz" />
+                        <img src="~/images/resource/image-1.jpg" alt="Hizmetlerimiz" />
                     </div>
                 </div>
                 <!-- Content Column -->
@@ -32,16 +32,16 @@
                         <div class="row clearfix">
                             <div class="column col-lg-6 col-md-6 col-sm-12">
                                 <ul class="list-style-one">
-                                    <li><span class="icon flaticon-certificate"></span>Marka Tescil İşlemleri</li>
-                                    <li><span class="icon flaticon-global-shipping"></span>İthalat ve Gümrük İşlemleri</li>
-                                    <li><span class="icon flaticon-camera"></span>Ürün Fotoğraf & Video Çekimi</li>
+                                    <li><span class="icon flaticon-analytics"></span>Marka Tescil İşlemleri</li>
+                                    <li><span class="icon flaticon-boat-anchor"></span>İthalat ve Gümrük İşlemleri</li>
+                                    <li><span class="icon flaticon-photo-camera"></span>Ürün Fotoğraf & Video Çekimi</li>
                                 </ul>
                             </div>
                             <div class="column col-lg-6 col-md-6 col-sm-12">
                                 <ul class="list-style-one">
                                     <li><span class="icon flaticon-shopping-cart"></span>E-Ticaret Sitesi Kurulumu</li>
                                     <li><span class="icon flaticon-search"></span>SEO Optimizasyonu</li>
-                                    <li><span class="icon flaticon-network"></span>Pazaryeri Entegrasyonu</li>
+                                    <li><span class="icon flaticon-technology"></span>Pazaryeri Entegrasyonu</li>
                                 </ul>
                             </div>
 
