--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -19,8 +19,9 @@
             color: #333;
         }
 
-        h1, h2 {
+        h1, h2, h3 {
             color: #2c3e50;
+            margin-top:40px;
         }
     </style>
  }
@@ -71,7 +72,7 @@
 <ul>
     <li>Oturumlar hatırlanır</li>
     <li>Sepet durumu saklanır</li>
-    <li>Ziyaretçi istatistikleri analiz edilir</li>
+    <li>Ziyaretçi istatistikleri analiz edilir (onayınız dahilinde)</li>
 </ul>
 <p>Tarayıcınızın ayarlarını değiştirerek çerezleri reddedebilir veya sınırlayabilirsiniz.</p>
 
@@ -105,7 +106,6 @@
         $(document).ready(function()
         {
             $(".dropdown").removeClass("current");
-            $(".about").addClass("current");
         });
     </script>
 }
