--- a/Views/Shared/_PartialContactUs.cshtml
+++ b/Views/Shared/_PartialContactUs.cshtml
@@ -12,22 +12,22 @@
                     <!-- Default Form -->
                     <div class="default-form contact-form">
                         <!--Default Form-->
-                        <form id="contact-form">
+                       
                             <div class="row clearfix">
                                 <div class="col-lg-6 col-md-6 col-sm-12 form-group">
-                                    <input type="text" id="contact-us-username" placeholder="Enter Name" required>
+                                    <input type="text" id="contact-us-username" placeholder="İsminizi Yazınız..." required>
                                 </div>
 
                                 <div class="col-lg-6 col-md-6 col-sm-12 form-group">
-                                    <input type="email" id="contact-us-email-address" placeholder="Mail Adresi Giriniz." required>
+                                    <input type="email" id="contact-us-email-address" placeholder="Mail Adresi Giriniz..." required>
                                 </div>
 
                                 <div class="col-lg-6 col-md-6 col-sm-12 form-group">
-                                    <input type="text" id="contact-us-subject" placeholder="Konu Giriniz." >
+                                    <input type="text" id="contact-us-subject" placeholder="Konu Giriniz..." >
                                 </div>
 
                                 <div class="col-lg-6 col-md-6 col-sm-12 form-group">
-                                    <input type="tel" id="contact-us-phone" placeholder="Telefon Numarası Giriniz." >
+                                    <input type="tel" id="contact-us-phone" placeholder="Telefon Numarası Giriniz..." >
                                 </div>
 
                                 <div class="col-lg-12 col-md-12 col-sm-12 form-group">
@@ -40,7 +40,6 @@
                                 </div>
 
                             </div>
-                        </form>
 
                     </div>
                     <!--End Default Form -->
