--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -53,12 +53,13 @@
             </div>
         </div>
         <!--Form Column-->
-        <div class="form-column" style="background-image:url(images/background/6.jpg);">
+        <div class="form-column" style="background-image:url('@Url.Content("~/images/background/6.jpg")');">
             <div class="inner-column">
                 <div class="subscribe-form-three">
                     <form method="post" action="https://expert-themes.com/html/global-industry/contact.html">
                         <div class="form-group">
-                            <input type="email" name="email" class="subscribe-input" value="" style="color:black;" placeholder="mail adresiniz" required>
+                            <span class="alert-text"></span>
+                            <input type="email" name="email" class="subscribe-input" value="" placeholder="mail adresiniz" required>
                             <button type="submit" class="theme-btn subscribe-btn"><span class="fa fa-send"></span></button>
                         </div>
                     </form>
