--- a/Views/Home/CookiePolicy.cshtml
+++ b/Views/Home/CookiePolicy.cshtml
@@ -28,7 +28,7 @@
  }
 
 <h1>Çerez Politikası</h1>
-<p><strong>Son güncelleme:</strong> @DateTime.Now.ToString("dd.MM.YYYY")</p>
+<p><strong>Son güncelleme:</strong> @DateTime.Now.ToString("dd.MM.yyyy")</p>
 
 <p>Bu Çerez Politikası, <strong>https://birilerigt.com/</strong> adresinden erişilen web sitemizi ziyaret ettiğinizde kullanılan çerezler hakkında bilgi vermek amacıyla hazırlanmıştır.</p>
 
